attached_assets/Pasted-Failed-to-compile-SyntaxError-var-www-mmb-portfolio-frontend-src-components-ui-toaster-jsx-Id-1757691744057_1757691744058.txt
Failed to compile.

SyntaxError: /var/www/mmb-portfolio/frontend/src/components/ui/toaster.jsx: Identifier 'useToast' has already been declared. (35:9)
  33 | }
  34 | // Ab (relative path se)
> 35 | import { useToast } from '../../hooks/use-toast'
     |          ^
  36 | import { Toast } from './toast'
  37 |
    at parser.next (<anonymous>)
    at normalizeFile.next (<anonymous>)
    at run.next (<anonymous>)
    at transform.next (<anonymous>)
ERROR in ./src/components/ui/toaster.jsx
Module build failed (from ../node_modules/babel-loader/lib/index.js):
SyntaxError: /var/www/mmb-portfolio/frontend/src/components/ui/toaster.jsx: Identifier 'useToast' has already been declared. (35:9)

  33 | }
  34 | // Ab (relative path se)
> 35 | import { useToast } from '../../hooks/use-toast'
     |          ^
  36 | import { Toast } from './toast'
  37 |
    at constructor (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:367:19)
    at FlowParserMixin.raise (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:6630:19)
    at FlowScopeHandler.checkRedeclarationInScope (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:1647:19)
    at FlowScopeHandler.declareName (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:1613:12)
    at FlowScopeHandler.declareName (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:1714:11)
    at FlowParserMixin.declareNameFromIdentifier (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:7594:16)
    at FlowParserMixin.checkIdentifier (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:7590:12)
    at FlowParserMixin.checkLVal (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:7529:12)
    at FlowParserMixin.finishImportSpecifier (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:14275:10)
    at FlowParserMixin.parseImportSpecifier (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:3489:17)
    at FlowParserMixin.parseNamedImportSpecifiers (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:14411:36)
    at FlowParserMixin.parseImportSpecifiersAndAfter (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:14251:37)
    at FlowParserMixin.parseImport (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:14244:17)
    at FlowParserMixin.parseStatementContent (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:12885:27)
    at FlowParserMixin.parseStatementLike (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:12776:17)
    at FlowParserMixin.parseStatementLike (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:2949:24)
    at FlowParserMixin.parseModuleItem (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:12753:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:13325:36)
    at FlowParserMixin.parseBlockBody (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:13318:10)
    at FlowParserMixin.parseProgram (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:12634:10)
    at FlowParserMixin.parseTopLevel (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:12624:25)
    at FlowParserMixin.parseTopLevel (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:3718:28)
    at FlowParserMixin.parse (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:14501:10)
    at parse (/var/www/mmb-portfolio/node_modules/@babel/parser/lib/index.js:14535:38)
    at parser (/var/www/mmb-portfolio/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/var/www/mmb-portfolio/node_modules/@babel/core/lib/transformation/normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (/var/www/mmb-portfolio/node_modules/@babel/core/lib/transformation/index.js:22:50)
    at run.next (<anonymous>)
    at transform (/var/www/mmb-portfolio/node_modules/@babel/core/lib/transform.js:22:33)
    at transform.next (<anonymous>)
    at step (/var/www/mmb-portfolio/node_modules/gensync/index.js:261:32)
    at /var/www/mmb-portfolio/node_modules/gensync/index.js:273:13
    at async.call.result.err.err (/var/www/mmb-portfolio/node_modules/gensync/index.js:223:11)
    at /var/www/mmb-portfolio/node_modules/gensync/index.js:189:28
    at /var/www/mmb-portfolio/node_modules/@babel/core/lib/gensync-utils/async.js:67:7
    at /var/www/mmb-portfolio/node_modules/gensync/index.js:113:33
    at step (/var/www/mmb-portfolio/node_modules/gensync/index.js:287:14)
    at /var/www/mmb-portfolio/node_modules/gensync/index.js:273:13
    at async.call.result.err.err (/var/www/mmb-portfolio/node_modules/gensync/index.js:223:11)

ERROR in [eslint] 
src/components/ui/toaster.jsx
  Line 35:9:  Parsing error: Identifier 'useToast' has already been declared. (35:9)

webpack compiled with 2 errors